src/page/ZiltagPage/index.css
.ziltag-ziltag-page {
  position: absolute;
  width: 100%;
  min-height: 100vh;
  background: rgb(249, 249, 249);
  font-family: Roboto, GillSans, Calibri, Trebuchet, sans-serif;
}

.ziltag-ziltag-page--mobile {
  background: white;
}

.ziltag-ziltag-page__op {
  display: flex;
  height: 56px;
  padding: 0 8px 14px;
  border-bottom: 1px solid rgba(0, 0, 0, .12);
}

.ziltag-ziltag-page__op-avatar {
  width: 56px;
  height: 56px;
}

.ziltag-ziltag-page__op-name {
  font-size: 16px;
  font-weight: 500;
}

.ziltag-ziltag-page__op-date {
  font-size: 12px;
  font-weight: 300;
  color: rgba(0, 0, 0, .54);
}

.ziltag-ziltag-page__op-clock-icon {
  letter-spacing: 10px;
}

.ziltag-ziltag-page__close {
  width: 20px;
  background: top center url(close.png) no-repeat;
  cursor: pointer;
}

.ziltag-ziltag-page__share {
  width: 20px;
  background: bottom center url(share.png) no-repeat;
  cursor: pointer;
}

.ziltag-ziltag-page__op .ziltag-ziltag-page__op-right {
  position: relative;
  height: 100%;
  margin-left: auto;
}

.ziltag-ziltag-page__op .ziltag-ziltag-page__op-left {
  position: relative;
  left: 10px;
}

.ziltag-ziltag-page__op-left .ziltag-ziltag-page__op-date {
  position: relative;
  top: 8px;
}

.ziltag-ziltag-page__op-left .ziltag-ziltag-page__op-name {
  position: relative;
  top: 16px;
}

.ziltag-ziltag-page__op-right .ziltag-ziltag-page__close,
.ziltag-ziltag-page__op-right, .ziltag-ziltag-page__share {
  height: 50%;
}

.ziltag-ziltag-page__op-right .ziltag-ziltag-page__social-media-menu {
  position: absolute;
  z-index: 1;
  top: 60px;
  left: -73px;
}

.ziltag-base-page-main__col1 .ziltag-ziltag-comment-input,
.ziltag-base-page-main__col1 .ziltag-pseudo-comment {
  margin-bottom: 10px;
}

.ziltag-ziltag-page--mobile .ziltag-ziltag-page__op {
  border: 0;
}

.ziltag-ziltag-page--mobile .ziltag-ziltag-page__op-left .ziltag-ziltag-page__op-date {
  position: relative;
  top: 16px;
}

.ziltag-ziltag-page--mobile .ziltag-ziltag-page__op-left .ziltag-ziltag-page__op-name {
  position: relative;
  top: 8px;
}

.ziltag-ziltag-page--mobile .ziltag-ziltag-page__op {
  padding: 0 32px 0;
}

.ziltag-ziltag-page--mobile .ziltag-ziltag-content {
  padding: 15px 32px;
}

